# 3-Body-Problem

./: .gitignore  CMakeLists.txt  CmakeLists.txt  README.md  app  body.py  chaosMeasure.py  closest_position.py  cut_positions.csv  heatmap.py  long_double  long_double.cpp  main.cpp  main.py  old  positions.csv  pythonVersion.py  requirements.txt  runcpp.py  system.py  tempCodeRunnerFile.py  test.py  utils.py  visualization.py
data/: cut_positions.csv  positions.csv  positions1.csv  positions2.csv  zoom.csv
logicCode/: normalprocessing  normalprocessing.cpp  pythonHeatmapMaker.py  pythonVersion.py  rocket.py
multiprocessing/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  compile_commands.json  main  main.cpp
multiprocessing/.cmake/api/v1/reply/: cache-v2-608fbbed65b3f501101e.json  cmakeFiles-v1-9a981187c4a12599ac97.json  codemodel-v2-365113f11c214f359271.json  index-2024-07-30T00-54-10-0373.json  target-main-Debug-6299b171026da86515b3.json  toolchains-v1-bb98b21159e1e8803146.json
normalprocessing/: main  main.cpp
visualization/: __init__.py  gui.py
